# ROS

./: .gitignore  README.md  THESIS_STRUCTURE.md  capture_blue_basket.py  capture_dock_data.py  capture_yolo_data.py  color_pick_place.py  factory.world  launch_pick_place.py  nav_pick_place.py  package.xml  pick_and_place.py  setup.cfg  setup.py  yolo_pick_place.py
launch/: pick_place.launch.py
maps/: map.pgm  map.yaml  map_grid.npy  pick_place_map.pgm  pick_place_map.yaml
scripts/: autonomous_pick_place.py
src/: omx_samples.csv
src/om_x_pick_place/: README.md  package.xml  setup.cfg  setup.py
src/om_x_pick_place/config/: controllers.yaml
src/om_x_pick_place/launch/: omx_pick_place.launch.py  pick_place.launch.py
src/om_x_pick_place/scripts/: omx_teach_positions.py  pick_and_place.py  pick_place_direct.py
src/om_x_pick_place/worlds/: pick_box.world  pick_place_world.world
tb3_pick_place/: __init__.py  arm_control.py  config.py  explorer.py  gui.py  lidar.py  main.py  motion.py  navigator.py  perception.py  pick_place_demo.py  robot_node.py  state_machine.py
tb3_pick_place.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
urdf/: turtlebot3_manipulation_grasp.urdf.xacro
worlds/: pick_place_world.world  tb3_pick_place.world
yolo_training/pick_place_v2/: args.yaml  results.csv
yoloimages/: classes.txt  dataset.yaml  labels.cache
yoloimages/labels/: frame_00000.txt  frame_00001.txt  frame_00002.txt  frame_00003.txt  frame_00004.txt  frame_00005.txt  frame_00006.txt  frame_00007.txt  frame_00008.txt  frame_00009.txt  frame_00010.txt  frame_00011.txt  frame_00012.txt  frame_00013.txt  frame_00014.txt  frame_00015.txt  frame_00016.txt  frame_00017.txt  frame_00018.txt  frame_00019.txt  frame_00020.txt  frame_00021.txt  frame_00022.txt  frame_00023.txt  frame_00024.txt  (+235 more)
yolomodel/: data.yaml
