<?xml version="1.0"?>
<package format="3">
  <name>tb3_pick_place</name>
  <version>1.0.0</version>
  <description>TB3 + OpenMANIPULATOR-X autonomous YOLO pick-and-place</description>

  <maintainer email="midhun@todo.todo">midhun</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
